--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.springframework</groupId>
-    <artifactId>H5DSWeb</artifactId>
+    <artifactId>h5ds</artifactId>
     <version>0.1.0</version>
     <parent>
         <groupId>org.springframework.boot</groupId>
